--- a/source/analysis-7.html.erb
+++ b/source/analysis-7.html.erb
@@ -182,103 +182,107 @@
 <%= partial "partials/action-bar", :locals => { :text => "Last modified on 03/12/2017 à 12:17,",:text2 => "Par Denis C. - INSA", :link => "analysis-8.html", :link_back => "analysis-7.html" } %>
 
 
-
-<script src="javascripts/Chart.bundle.min.js"></script>
-  
+<%= partial "partials/javascripts" %>
     
-    <script>
-      var ctx = document.getElementById("myChart");
-      var myChart = new Chart(ctx, {
-          type: 'doughnut',
-          data: {
-              // labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-              datasets: [{
-                  label: '',
-                  data: [12, 19, 3, 5, 2, 3],
-                  backgroundColor: [
-                      'rgba(255, 99, 132, .5)',
-                      'rgba(54, 162, 235, .5)',
-                      'rgba(255, 206, 86, .5)',
-                      'rgba(75, 192, 192, .5)',
-                      'rgba(153, 102, 255, .5)',
-                      'rgba(255, 159, 64, .5)'
-                  ],
-                  hoverBackgroundColor: [
-                      'rgba(255, 99, 132, 1)',
-                      'rgba(54, 162, 235, 1)',
-                      'rgba(255, 206, 86, 1)',
-                      'rgba(75, 192, 192, 1)',
-                      'rgba(153, 102, 255, 1)',
-                      'rgba(255, 159, 64, 1)'
-                  ],
-                  borderWidth: 4,
-                  borderColor: [
-                      'rgba(255,99,132,1)',
-                      'rgba(54, 162, 235, 1)',
-                      'rgba(255, 206, 86, 1)',
-                      'rgba(75, 192, 192, 1)',
-                      'rgba(153, 102, 255, 1)',
-                      'rgba(255, 159, 64, 1)'
-                  ]
-              }]
+<script>
+  var ctx = document.getElementById("myChart");
+  var myChart = new Chart(ctx, {
+      type: 'doughnut',
+      data: {
+          // labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+          datasets: [{
+              label: '',
+              data: [12, 19, 3, 5, 2, 3],
+              backgroundColor: [
+                  'rgba(255, 99, 132, .5)',
+                  'rgba(54, 162, 235, .5)',
+                  'rgba(255, 206, 86, .5)',
+                  'rgba(75, 192, 192, .5)',
+                  'rgba(153, 102, 255, .5)',
+                  'rgba(255, 159, 64, .5)'
+              ],
+              hoverBackgroundColor: [
+                  'rgba(255, 99, 132, 1)',
+                  'rgba(54, 162, 235, 1)',
+                  'rgba(255, 206, 86, 1)',
+                  'rgba(75, 192, 192, 1)',
+                  'rgba(153, 102, 255, 1)',
+                  'rgba(255, 159, 64, 1)'
+              ],
+              borderWidth: 4,
+              borderColor: [
+                  'rgba(255,99,132,1)',
+                  'rgba(54, 162, 235, 1)',
+                  'rgba(255, 206, 86, 1)',
+                  'rgba(75, 192, 192, 1)',
+                  'rgba(153, 102, 255, 1)',
+                  'rgba(255, 159, 64, 1)'
+              ]
+          }]
+      },
+      options: {
+          tooltips: {
+            enabled: false,
+            backgroundColor: 'rgba(0,0,0,0)'
           },
-          options: {
-              tooltips: {
-                enabled: false,
-                backgroundColor: 'rgba(0,0,0,0)'
-              },
-              legend: {
-                  enabled: false,
-              },
-              scales: {
-                 display: false
-              },
-              legend: {
-                display: false
-              }
-
-          }
-      });
-
-
-      var ctx = document.getElementById("myChart2");
-      var myChart = new Chart(ctx, {
-          type: 'doughnut',
-          data: {
-              // labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-              datasets: [{
-                  label: '',
-                  data: [12, 19],
-                  backgroundColor: [
-                      'rgba(255, 99, 132, .5)',
-                      'rgba(54, 162, 235, .5)'
-                  ],
-                  hoverBackgroundColor: [
-                      'rgba(255, 99, 132, 1)',
-                      'rgba(54, 162, 235, 1)'
-                  ],
-                  borderWidth: 4,
-                  borderColor: [
-                      'rgba(255,99,132,1)',
-                      'rgba(54, 162, 235, 1)'
-                  ]
-              }]
+          legend: {
+              enabled: false,
           },
-          options: {
-              tooltips: {
-                enabled: false,
-                backgroundColor: 'rgba(0,0,0,0)'
-              },
-              legend: {
-                  enabled: false,
-              },
-              scales: {
-                 display: false
-              },
-              legend: {
-                display: false
-              }
-
+          scales: {
+             display: false
+          },
+          legend: {
+            display: false
           }
-      });
+
+      }
+  });
+
+
+  var ctx = document.getElementById("myChart2");
+  var myChart = new Chart(ctx, {
+      type: 'doughnut',
+      data: {
+          // labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+          datasets: [{
+              label: '',
+              data: [12, 19],
+              backgroundColor: [
+                  'rgba(255, 99, 132, .5)',
+                  'rgba(54, 162, 235, .5)'
+              ],
+              hoverBackgroundColor: [
+                  'rgba(255, 99, 132, 1)',
+                  'rgba(54, 162, 235, 1)'
+              ],
+              borderWidth: 4,
+              borderColor: [
+                  'rgba(255,99,132,1)',
+                  'rgba(54, 162, 235, 1)'
+              ]
+          }]
+      },
+      options: {
+          tooltips: {
+            enabled: false,
+            backgroundColor: 'rgba(0,0,0,0)'
+          },
+          legend: {
+              enabled: false,
+          },
+          scales: {
+             display: false
+          },
+          legend: {
+            display: false
+          }
+
+      }
+  });
+
+  $('.slider').slider({
+    formatter: function(value) {
+      return 'Current value: ' + value;
+    }
+  });
 </script>
