--- a/source/transition-1.html.erb
+++ b/source/transition-1.html.erb
@@ -17,7 +17,8 @@
   </div>
   </div>
 
-<div class="text-center padded"><%= image_tag "transition.png", width:"230" %></div>
+
+<div class="padded"><%= partial "partials/loading" %></div>
 
 
 <%= partial "partials/action-bar", :locals => { :text => "Saving...",:text2 => "Par Denis C. - INSA", :link => "analysis.html", :link_back => "transition-1.html" } %>
