--- a/source/transition-7.html.erb
+++ b/source/transition-7.html.erb
@@ -17,7 +17,7 @@
   </div>
   </div>
 
-<div class="text-center padded"><%= image_tag "transition.png", width:"230" %></div>
+<div class="padded"><%= partial "partials/loading" %></div>
 
 
 <%= partial "partials/action-bar", :locals => { :text => "Saving...",:text2 => "Par Denis C. - INSA", :link => "sun-diagram.html", :link_back => "analysis-7.html" } %>
