--- a/source/analysis-2.html.erb
+++ b/source/analysis-2.html.erb
@@ -15,7 +15,7 @@
         <p class="text-left text-italic color-grey text-light mt-">Select a variety of relevant patents for the project</p>
       </div>
       <div class="col-sm-3">
-          <%= partial "partials/progress", :locals => { :percentage => "60", :step_name => "Patent analysis" } %>
+          <%= partial "partials/progress", :locals => { :percentage => "30", :step_name => "Patent analysis" } %>
       </div>
   </div>
 </div>
@@ -36,12 +36,12 @@
             
             <h3 class="text-bold h4 mb color-blue-dark">Positive retraction latch locking dog for a rotating control …</h3>
 
-            <div class="drop-area p clearfix">
+            <div class="drop-area p clearfix" id="drop-area-<%= i%>">
               <% for i in 0..2 do %>
                 <span class="label label-default pull-left mr- mb- df at-c">
                   <i class="ionicons ion-pricetag color-grey-light mr- font-14 pull-left"></i>
                   <span class="label__text">LER Pawl on excentric + 2nd pawl</span>
-                  <i class="ionicons ion-android-close pull-right color-grey-light font-14 ml"></i>
+                  <i class="label__close ionicons ion-android-close js-remove-label"></i>
                 </span>
               <% end %>
             </div>
@@ -52,39 +52,40 @@
       <% end %>
 
     </div>
+
     <div class="col-sm-4 df pl0">
-      <div class="bg-dark-blue-2 p f-1-0-auto">
+      <div class="bg-dark-blue-2 p">
         <div class="clearfix mb">
           <p class="h1 color-white mb+">Suggested categories</p>
           <a href="#" class="btn btn-outline color-white">Edit</a>
         </div>
+
+          <div id="suggested-categories">
           <% for i in 0..6 do %>
               
-              <div class="clearfix">
-                <span class="label label-primary mr- mb- pull-left">
+                <span class="label label-default">
                   <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
                   <span class="label__text">LER Pawl on excentric + 2nd pawl</span>
+                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
+                  <div class="label__number"><%= Random.rand(30) %></div>
                 </span>
-                <div class="color-blue text-condensed font-14 mt- pull-left"><%= Random.rand(30) %></div>
-              </div>
 
-              <div class="clearfix">
-                <span class="label label-primary mr- mb- pull-left">
+                <span class="label label-default">
                   <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
                   <span class="label__text">Store enery in spring</span>
+                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
+                  <div class="label__number"><%= Random.rand(30) %></div>
                 </span>
-                <div class="color-blue text-condensed font-14 mt- pull-left"><%= Random.rand(30) %></div>
-              </div>
 
-              <div class="clearfix">
-                <span class="label label-primary mr- mb- pull-left">
+                <span class="label label-default">
                   <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
                   <span class="label__text">2nd pawl</span>
+                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
+                  <div class="label__number "><%= Random.rand(30) %></div>
                 </span>
-                <div class="color-blue text-condensed font-14 mt- pull-left"><%= Random.rand(30) %></div>
-              </div>
 
           <% end %>
+          </div>
       </div>
     </div>
   </div>
@@ -92,4 +93,50 @@
 
 
 
-<%= partial "partials/action-bar", :locals => { :text => "Last modified on 03/12/2017 à 12:17,",:text2 => "Par Denis C. - INSA", :link => "transition-3.html", :link_back => "analysis-2.html" } %>
+<%= partial "partials/action-bar", :locals => { :text => "Last modified on 03/12/2017 à 12:17,",:text2 => "Par Denis C. - INSA", :link => "transition-3.html", :link_back => "analysis-1.html" } %>
+
+<%= partial "partials/javascripts" %>
+
+<script>
+  var sortable = $('sortable');
+
+
+  dragula([$('drop-area-0'), $('drop-area-1'), $('drop-area-2'), $('drop-area-3'), $('drop-area-4'), $('drop-area-4'), $('suggested-categories')], {
+    copy: function (el, source) {
+        return source === $('suggested-categories')
+      },
+      accepts: function (el, target) {
+        return target !== $('suggested-categories')
+      }
+  }).on('drag', function (el) {
+    el.className = el.className.replace('ex-moved', '');
+  }).on('drop', function (el) {
+    el.className += ' ex-moved';
+  }).on('over', function (el, container) {
+    container.className += ' drop-area--droping';
+  }).on('out', function (el, container) {
+    container.className = container.className.replace('drop-area--droping', '');
+  });
+
+
+
+  function clickHandler (e) {
+    var target = e.target;
+    if (target === sortable) {
+      return;
+    }
+    target.innerHTML += ' [click!]';
+
+    setTimeout(function () {
+      target.innerHTML = target.innerHTML.replace(/ \[click!\]/g, '');
+    }, 500);
+  }
+
+  function $ (id) {
+    return document.getElementById(id);
+  }
+
+  $(".js-remove-label").click(function(){
+          $(this).parent().hide();
+  });
+</script>
