--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,43 +1,192 @@
 ---
 title: Welcome to Pixseb
 ---
+	
+<nav class="navbar index__navbar  mb0">
+    <%= link_to("Pixseb", "index.html" , class:"navbar-brand text-uppercase") %>
+    <a class="navbar-brand pl0" href="#">
+    <% if current_page.data.menu_title %>
+    <i class="ionicons ion-chevron-right color-grey-light mr-"></i>
+    <% end %>
+    <%= current_page.data.menu_title %>
+    </a>
+    <ul class="nav navbar-nav pull-left">
+      <li class="nav-item">
+        <a class="nav-link p text-medium" href="/home.html">Concept</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link p text-medium" href="/home.html">Testimonials</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link p text-medium" href="/home.html">Team</a>
+      </li>
 
-<nav class="navbar navbar-default navbar-secondary bg-faded pt pb">
-  <div class="container text-center ">
-  	<%= link_to("New", "definition.html" , class:"btn btn--plus pull-left") %>
-    <h1 class="text-bold color-grey mt--">Your SUN diagrams</h1>
-  </div>
+    </ul>
+    <ul class="nav navbar-nav pull-right">
+
+      <li class="nav-item">
+        <a class="nav-link p text-medium" href="/home.html">Pricing</a>
+      </li>
+
+	  <li class="nav-item">
+        <a class="nav-link p text-medium" href="/home.html">En</a>
+      </li>
+
+      <a href="#signup" class="nav-item btn btn-outline color-white"  data-toggle="modal">Sign up</a>
+
+      <a href="#login" class="nav-item btn btn-round btn-white" data-toggle="modal">Login</a>
+
+    </ul>
+    
 </nav>
-
-
+	
+	
 <div class="container">
 	<div class="row">
-		<% for i in 1..3 do %>
-		<div class="col-sm-4">
-			<div class="card">
-				<%= image_tag "http://placehold.it/300x200", width:"100%" %>
-				<div class="card__footer p">
-					<div class="clearfix mb-">
-						<p class="pull-left color-grey text-bold">Project 42</p>
-						<p class="pull-right">In progress</p>
-					</div>
-					<div class="clearfix">
-						<div class="pull-left">
-							<div class="member-group">
-							        <span class="member-group__avatar">
-							          <%= image_tag "images/face-1.jpg", class:"", width:"25" %></span>
-							        <span class="member-group__avatar"><%= image_tag "images/face-2.jpg", class:"", width:"25" %></span>
-							        <span class="member-group__avatar"><%= image_tag "images/face-3.jpg", class:"", width:"25" %></span>
-							        <span class="member-group__text">3 MEMBERS</span>
-							      </div>
-						</div>
-						<div class="pull-right">
-							03/12/17 at 12:17
-						</div>
-					</div>
-				</div>
-			</div>
+		<div class="padded">
+			<h1>Analysis. Visualize. Innovate.</h1>	
+			<p class="text-center color-white"><strong>Pilotage de l’innovation par l’extraction Sémantique des contenus Brevets</strong> <br> (Driving innovation through the semantic extraction of patent content)</p>
 		</div>
-		<% end %>
+		<div class="index__main-image padded">
+
+			<%= image_tag("main-screen.png") %>
+			
+		</div>
 	</div>
 </div>
+
+<div class="index__banner">
+	<h2 class="color-pink text-uppercase mr">Free beta now</h2>
+	<a href="#" class="btn bg-pink color-white">Sign in</a>
+</div>
+
+<div class="bg-white padded">
+
+	<h2 class="color-blue text-center text-condensed">Concept</h2>
+	<div class="padded"></div>
+
+</div>
+
+
+<div class="modal fade " id="login">
+    <div class="modal-dialog home__modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close btn btn-default" data-dismiss="modal" aria-hidden="true">&times;</button>
+
+          <h4 class="modal-title text-center">Connect to INOVIZ</h4>
+        </div>
+        <div class="modal-body">
+          <div class="home__alert clearfix mb-">
+            <p class="small-text">Identifiant et/ou mot de passe invalide</p>
+            <a href="#" class="small-text">Oublié ?</a>
+          </div>
+          <form action="" class="home__form">
+            <div class="input-wrap js-float-label-wrapper">
+              <label for="">Indentifiant</label>
+              <input type="text" name="id" id="id" class="form-control">
+            </div>
+            <div class="input-wrap js-float-label-wrapper">
+              <label for="">Current password</label>
+              <input type="password" name="current" id="current" class="form-control">
+            </div>
+            <div class="text-center mt">
+              <input type="submit" value="Login" class="btn btn-lg btn-round btn-dark white p- pl+ pr+ mb">
+              <div>
+                <label>
+                  <input type="checkbox" id="inlineCheckbox1" value="option1"> Remember me
+                </label>
+              </div>
+              
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <div class="text-center mt">
+            <a value="Login" class="btn btn-lg btn-round btn-blue white p- pl+ pr+">New user ? Sign up</a>
+            <div class="text-center mt mb">Or sign up with</div>
+            <div class="clearfix">
+              <a href="#" class="home__social home__social--facebook"><img src="images/facebook.png" alt="facebook"></a>
+              <a href="#" class="home__social home__social--linkedin"><img src="images/linkedin.png" alt="linkedin"></a>
+              <a href="#" class="home__social home__social--google"><img src="images/google.png" alt="google"></a>
+              <a href="#" class="home__social home__social--linkedin"><img src="images/twitter.png" alt="twitter"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="modal fade " id="signup">
+    <div class="modal-dialog home__modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close btn btn-default" data-dismiss="modal" aria-hidden="true">&times;</button>
+
+          <h4 class="modal-title text-center">Signup to INOVIZ</h4>
+        </div>
+        <div class="modal-body">
+          <ul class="mb pl">
+            <li class="mb-">Bénéfice : lorem ipsum dolor sit amet</li>
+            <li class="mb-">Bénéfice : lorem ipsum dolor sit amet</li>
+            <li class="mb-">Bénéfice : lorem ipsum dolor sit amet</li>
+          </ul>
+          <!-- Alert is hidden (display none) -->
+          <div class="home__alert clearfix mb-">
+            <p class="small-text">Identifiant et/ou mot de passe invalide</p>
+            <a href="#" class="small-text">Oublié ?</a>
+          </div>
+          <form action="" class="home__form">
+            <div class="input-wrap js-float-label-wrapper">
+              <label for="">Prénom</label>
+              <input type="text" name="firstname" id="firstname" class="form-control">
+            </div>
+            <div class="input-wrap js-float-label-wrapper">
+              <label for="">Nom</label>
+              <input type="text" name="lastname" id="lastname" class="form-control">
+            </div>
+            <div class="input-wrap js-float-label-wrapper">
+              <label for="">Email</label>
+              <input type="email" name="current" id="current" class="form-control">
+            </div>
+            <div class="input-wrap js-float-label-wrapper">
+              <label for="">Password</label>
+              <input type="password" name="current" id="current" class="form-control">
+            </div>
+            <div class="input-wrap js-float-label-wrapper">
+              <label for="">Confim Password</label>
+              <input type="password" name="current" id="current" class="form-control">
+            </div>
+            <div class="text-center mt">
+              <div>
+                <label>
+                  <input type="checkbox" id="inlineCheckbox1" value="option1"> I accept terms &amp; conditions
+                </label>
+              </div>
+              <input type="submit" value="Sign up for free" class="btn btn-lg btn-round btn-dark white p- pl+ pr+ mb mt-">
+              
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <div class="text-center mt">
+            <a value="Login" class="btn btn-lg btn-round btn-blue white p- pl+ pr+">Already a user ? Login</a>
+            <div class="text-center mt mb">Or login with</div>
+            <div class="clearfix">
+              <a href="#" class="home__social home__social--facebook"><img src="images/facebook.png" alt="facebook"></a>
+              <a href="#" class="home__social home__social--linkedin"><img src="images/linkedin.png" alt="linkedin"></a>
+              <a href="#" class="home__social home__social--google"><img src="images/google.png" alt="google"></a>
+              <a href="#" class="home__social home__social--linkedin"><img src="images/twitter.png" alt="twitter"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <%= partial "partials/javascripts" %>
+
+  <script>
+  	$( '.js-float-label-wrapper' ).FloatLabel();
+  </script>
