--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -2,9 +2,40 @@
 	text-decoration: none;
 	background: #FFFFFF;
 	box-shadow: 0 2px 2px 0 rgba(18,25,34,0.22);
+	&:hover {
+		.card__img__hover {
+			display: block;
+			display: flex;
+		}
+	}
 	&__title {
 		color: $grey;
 		font-size: 20px;
+	}
+	&__img {
+		position: relative;
+
+		&__hover {
+			display: none;
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			height: 220px;
+			z-index: 2;
+			background: rgba(22,114,188,0.84);
+		}
+		&__text {
+			position: absolute;
+			top: 185px;
+			right: 30px;
+			z-index: 3;
+			.ionicons {
+				font-size: 1.5em;
+				margin-left: 15px;
+				margin-top: -3px;
+			}
+		}
 	}
 	&__file {
 		background-color: #EFF2F3;
