--- a/source/stylesheets/components/_form.scss
+++ b/source/stylesheets/components/_form.scss
@@ -3,6 +3,7 @@
 	border-bottom: solid 1px $grey-lighter;
 	padding: 0;
 	box-shadow: none;
+	height: 55px;
 	&:focus {
 		border: none;
 		border-bottom: solid 1px $grey-lighter;
