--- a/source/stylesheets/components/_mini-card.scss
+++ b/source/stylesheets/components/_mini-card.scss
@@ -5,23 +5,34 @@
 	&--pink {
 		border: solid 1px #F7B4C7;
 		border-right: solid 3px $pink;
-		&.selected {
-			border: none;
+		&:hover {
+			color: $pink;
+			box-shadow: 0px 1px 0px $pink, -1px -1px 0px $pink;
+		}
+		&.selected, &.jsplumb-connected {
 			background: $pink;
+			color: #fff;
+			border: solid 1px $pink;
 		}
 	}
 	&--green {
 		border: solid 1px #a1E3DF;
 		border-left: solid 3px $green;
-		&.selected {
-			border: none;
+		&:hover {
+			color: $green;
+			box-shadow: 0px 1px 0px $green, -1px -1px 0px $green;
+		}
+		&.selected, &.jsplumb-connected {
 			background: $green;
+			color: #fff;
+			border: solid 1px $green;
 		}
 	}
 	
 	&__content {
 		@extend .clearfix;
 		display: flex;
+		align-items: center;
 	}
 
 	&__anchor {
@@ -37,14 +48,14 @@
 		border-radius: 50%;
 		padding: 8px;
 		.mini-card--pink & {
-			right: -18px;
+			right: -21px;
 			background: rgba(235,42,93,0.20);
 			span  {
 				background: $pink;
 			}
 		}
 		.mini-card--green & {
-			left: -18px;
+			left: -21px;
 			background: rgba(0,161,151,0.20);
 			span  {
 				background: $green;
@@ -60,3 +71,5 @@
 		}
 	}
 }
+
+
