--- a/source/stylesheets/layout/_base.scss
+++ b/source/stylesheets/layout/_base.scss
@@ -32,13 +32,6 @@ body {
 	}
 }
 
-.drop-area {
-	background: rgba(174,185,191,0.20);
-	border: 2px dashed rgba(22,114,188,0.50);
-	border-radius: 2px;
-	width: 100%;
-	min-height: 100px;
-}
 .dot {
 	display: block;
 	width: 10px;
@@ -134,4 +127,69 @@ body {
 	text-align: center;
 	line-height: 40px;
 	border-radius: 50%;
+}
+
+.toggle-wrap {
+	position: relative;
+	input[type="checkbox"]{
+		display: none;	
+	}
+	.toggle{
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		right: 9px;
+		margin: auto;
+		width: 51px;
+		height: 31px;
+
+		label,
+		i{
+			box-sizing: border-box;
+			display: block;
+			background: #ffffff;
+		}
+
+		label{
+			width: 51px;
+			height: 32px;
+			border-radius: 32px; 
+			border: 2px solid $blue;
+			transition: all 0.30s ease;
+		}
+
+		i{
+			position: absolute;
+			top: 2px;
+			left: 2px;
+			width: 28px;
+			height: 28px;
+			border-radius: 28px;
+			box-shadow: 0 0 1px 0 rgba(0,0,0, 0.25),
+						0 3px 3px 0 rgba(0,0,0, 0.15);
+			background: #ffffff;
+			transition: all 0.3s cubic-bezier(0.275, -0.450, 0.725, 1.450);
+		}
+	}
+
+	input[type="checkbox"]:active + .toggle i{
+		width: 35px;
+	}
+
+	input[type="checkbox"]:active + .toggle label,
+	input[type="checkbox"]:checked + .toggle label{
+		border: 16px solid $blue;
+	}
+
+	input[type="checkbox"]:checked + .toggle i{
+		left: 21px;
+	}
+
+	input[type="checkbox"]:checked:active + .toggle label{
+		border: 16px solid $blue;
+	}
+
+	input[type="checkbox"]:checked:active + .toggle i{
+		left: 14px;
+	}
 }
