--- a/source/stylesheets/layout/_navbar.scss
+++ b/source/stylesheets/layout/_navbar.scss
@@ -2,9 +2,19 @@
 // BOOTSTRAP'S NAVIGATION OVERIDE 
 .navbar {
 }
+.navbar-nav > li > .dropdown-menu {
+    width: 100%;
+}
+
+.dropdown-item {
+  color: $blue-dark;
+  margin-bottom: 10px;
+  display: block;
+}
 
 .navbar-primary{
   background: #FFFFFF;
+  height: 63px;
   border-bottom: solid 2px $light;
 
   .navbar-brand {
@@ -18,6 +28,15 @@
     color: $grey;
     font-weight: 300;
     border-right: solid 1px $light;
+    &:hover {
+      color: $blue;
+    }
+    &:active, &:focus {
+      color: $blue-2;
+    }
+    &:hover, &:active, &:focus {
+      background: linear-gradient(#fff, #EBEFF1);
+    }
   }
 
 } 
