--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,4 +1,45 @@
-/* -------------------------------------
- * CSS code specific to home page
- * (margin/padding adjustments)
- * ------------------------------------- */
+.index {
+	padding-top: 20px;
+	background: $blue-2 url("../images/home-sun.png") center 350px no-repeat;
+	&__navbar {
+		.navbar-brand {
+			font-size: 24px;
+			color: #FFFFFF;
+			letter-spacing: 4.9px;
+		}
+		.nav-link {
+			text-transform: uppercase;
+			font-size: 14px;
+			color: #B7E0FF;
+			&:hover {
+				background: $blue-2;
+			}
+		}
+		.btn {
+			padding: 10px;
+			margin-top: 10px;
+			margin-right: 20px;
+			width: 90px;
+		}
+	}
+	h1 {
+		color: #fff;
+		font-size: 48px;
+		text-align: center;
+		margin-bottom: 55px;
+		font-family: $header-font;
+	}
+
+	&__main-image {
+		text-align: center;
+
+	}
+
+	&__banner {
+		display: flex;
+		justify-content: center;
+		background: #182A36;
+		padding: 40px 0;
+		text-align: center;
+	}
+}
