--- a/source/transition-3.html.erb
+++ b/source/transition-3.html.erb
@@ -12,12 +12,12 @@
         </ul>
       </div>
       <div class="col-sm-3">
-          <%= partial "partials/progress", :locals => { :percentage => "20", :step_name => "Patent analysis" } %>
+          <%= partial "partials/progress", :locals => { :percentage => "30", :step_name => "Patent analysis" } %>
       </div>
   </div>
   </div>
 
-<div class="text-center padded"><%= image_tag "transition.png", width:"230" %></div>
+<div class="padded"><%= partial "partials/loading" %></div>
 
 
 <%= partial "partials/action-bar", :locals => { :text => "Saving...",:text2 => "Par Denis C. - INSA", :link => "analysis-3.html", :link_back => "transition-2.html" } %>
